# My_modern_cpp_challenge

./: .gitignore  CMakeLists - Copy.txt  CMakeLists.txt  README.md  makeAll.sh
Chapter01/: CMakeLists.txt
Chapter01/problem_01/: Makefile  main
Chapter01/problem_02/: CMakeLists.txt  problem_02_v1.cpp
Chapter02/: CMakeLists.txt
Chapter02/problem_05/: CMakeLists.txt
Chapter02/problem_06/: CMakeLists.txt
src/: CMakeLists.txt
src/Chapter01/: CMakeLists.txt
src/Chapter01/problem_01/: CMakeLists.txt  problem_01_v1.cpp  problem_01_v2.cpp
src/Chapter01/problem_02/: problem_02_v1.cpp
src/Chapter01/problem_03/: CMakeLists.txt  problem_03_v1.cpp
src/Chapter01/problem_04/: problem_04_v1  problem_04_v1.cpp  problem_04_v2.cpp  problem_04_v3.cpp
src/Chapter01/problem_05/: CMakeLists.txt  problem_05_v1.cpp
src/Chapter02/problem_05/: CMakeLists.txt
src/Chapter02/problem_06/: CMakeLists.txt
